# Action-Recognition

./: .gitignore  .pre-commit-config.yaml  magic_fall_dataset.csv  magic_fall_dataset_2class.csv  prova.py  pyproject.toml  pytorch-crash-course.ipynb
src/: class_names.py  datasets.py  image_datasets.py  inference_video.py  model.py  train.py  utils.py
src/image/: class_names.py  image_datasets.py  inference_video.py  train.py
src/video/: class_names.py  magic_fall_dataset_2class_train.csv  utils.py  video_dataset.py  video_train.py
