[tool.poetry]
name = "action-recognition"
version = "0.1.0"
description = ""
authors = ["Francoiaia <fiaia2070@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
opencv-python = "^4.11.0.86"
pandas = "^2.2.3"
pre-commit = "^4.0.1"
tqdm = "^4.67.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
